# DSCOVR-NASASPACEAPPS23

./: GP_Kp_Forecast.ipynb  README.md  bayesian_NN_Kp_Forecast.ipynb  pyproject.toml
preprocessing/: README.md  anomalies2.py  mean_std_dev.py
